# alyr

./: CMakeLists.txt  README.md  main.cpp
code/: aliases.hpp  alyr.cpp  alyr.hpp  structs.hpp
code/help/: help.cpp  help.hpp
code/maps/: maps.hpp
code/parsing_loading/: load_palettes.cpp  parse_options.cpp  parse_options.hpp
code/parsing_saving_loading/: load_palettes.cpp  parse_options.cpp  parse_options.hpp  save_load_lyap_exp_matr.cpp
code/rendering/: block_exp_calculator.ipp  block_renderer.cpp  render.cpp
